fix(whiteframe): working with dp insted of z-index
Closes #4706.

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -153,7 +153,7 @@ md-select-menu {
     }
   }
 
-  box-shadow: $whiteframe-shadow-z1;
+  box-shadow: $whiteframe-shadow-1dp;
   max-height: ($select-option-height * $select-max-visible-options) + 2 * $baseline-grid;
   min-height: $select-option-height;
   overflow-y: hidden;
